2003-02-21  Jeff Breidenbach  <jab@debian.org>

	* debian/rules: Adjusted .deb build rules to Steve's suggestion.
	  Allows debuild to run from pristine CVS checkout while still
	  allowing debian/ tweakers to avoid some build latency.

2003-02-14  Andy Heroff  <aheroff@ameritech.net>

	* server/player.c: Fixed several GList usage issues in player
	  reconnection code. Need to always store the return value from
	  an append or remove, also don't need to allocate a list node
	  when the GList pointer is NULL. NULL is considered the empty
	  list value.

	* server/turn.c: Check for NULL player when trying to hand out
	  resources after a roll. We can run into this if a player drops
	  and a roll occurs while he is disconnected. Fixes bug 621358,
	  but creates bug 686956.

2003-02-13  Andy Heroff  <aheroff@ameritech.net>

	* Batch fix of bugs 205475, 480328, 482336, 482744. Cleaned up
	  compiler warnings.

	* ai/ai.c: Removed goto. Added warning when the computer names file
	  can't be found.

	* server/gnocatan-server-console.c: Added printing of usage
	  information if attempt to start server returns FALSE.

	* server/gnocatan-server.c: Added missing CR to log message. Changed
	  g_error call to g_critical call when game params are not found to
	  prevent server from exiting at that point, also allowing the call
	  to return FALSE in that case.

2003-02-11  Andy Heroff  <aheroff@ameritech.net>

	* server/trade.c: Fixed SF bug 660814 regarding server crash during
	  trading. Wrong quote list nodes were being deleted when a new
	  quote was issued which removed a request for a resource for which
	  there was already a quote on the table.

2003-01-24  Steve Langasek  <vorlon@debian.org>

	* client/settingscreen.c, po/gnocatan.pot, po/de.po: fix misspelling.

	* po/es.po: translation improvements.  Although only 60% of the
	  gettext strings are translated, the game is now almost
	  completely playable in Spanish.
