@@ -155,12 +155,12 @@ static gboolean global_unhandled(StateMachine *sm, gint event)
 		client_exit();
 		return TRUE;
 	case SM_RECV:
-		if (sm_recv(sm, "ERR %S", str)) {
+		if (sm_recv(sm, "ERR %S", str, sizeof (str))) {
 			log_message( MSG_ERROR, "Error (%s): %s\n", sm_current_name(sm), str);
 			exit(0);
 			return TRUE;
 		}
-		if (sm_recv(sm, "%S", str)) {
+		if (sm_recv(sm, "%S", str, sizeof (str))) {
 			log_message( MSG_ERROR, "Error (%s): %s\n", sm_current_name(sm), str);
 			return TRUE;
 		}
@@ -228,7 +228,7 @@ static gboolean check_chat_or_name(StateMachine *sm)
 	gint player_num;
 	char str[512];
 
-	if (sm_recv(sm, "player %d chat %S", &player_num, str)) {
+	if (sm_recv(sm, "player %d chat %S", &player_num, str, sizeof (str))) {
 		/*
 		log_message( MSG_INFO, _("%s said: "), player_name(player_num, TRUE));
 		log_message( MSG_CHAT, "%s\n", str);
@@ -239,7 +239,7 @@ static gboolean check_chat_or_name(StateMachine *sm)
 		player_change_name(player_num, NULL);
 		return TRUE;
 	}
-	if (sm_recv(sm, "player %d is %S", &player_num, str)) {
+	if (sm_recv(sm, "player %d is %S", &player_num, str, sizeof (str))) {
 		player_change_name(player_num, str);
 		return TRUE;
 	}
@@ -490,7 +490,7 @@ static gboolean mode_start(StateMachine *sm, gint event)
 		return TRUE; 
 	} 
 	if (sm_recv(sm, "player %d of %d, welcome to gnocatan server %S",
-		    &player_num, &total_num, version)) {
+		    &player_num, &total_num, version, sizeof (version))) {
 		player_set_my_num(player_num);
 		player_set_total_num(total_num);
 		if (saved_name != NULL)
@@ -576,7 +576,7 @@ static gboolean mode_load_game(StateMachine *sm, gint event)
 	}
 	if (check_other_players(sm))
 		return TRUE;
-	if (sm_recv(sm, "%S", str)) {
+	if (sm_recv(sm, "%S", str, sizeof (str))) {
 		params_load_line(game_params, str);
 		return TRUE;
 	}
